--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "author": "Diego",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Diego-Testi/secret.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Diego-Testi/secret/issues"
+  },
+  "homepage": "https://github.com/Diego-Testi/secret#readme"
 }
